Fixed dropdown menu not showing issue
Removed pointless overflow:hidden

--- a/wp-content/themes/imb/assets/css/main.css
+++ b/wp-content/themes/imb/assets/css/main.css
@@ -6319,7 +6319,6 @@ figure.alignnone {
 .navbar-default .navbar-collapse ul#menu-primary-navigation {
   display: inline-block;
   width: 100%;
-  overflow: hidden;
   margin: 0;
   padding: 0;
 }
