--- a/wp-content/themes/imb/assets/less/layouts/_header.less
+++ b/wp-content/themes/imb/assets/less/layouts/_header.less
@@ -45,7 +45,6 @@
  		ul#menu-primary-navigation {
  			display:inline-block;
  			width: 100%;
-      overflow: hidden;
  			margin: 0;
  			padding: 0;			
  	}
